:green_heart: Fix lineage

--- a/docs/biology/lineage.ipynb
+++ b/docs/biology/lineage.ipynb
@@ -5,7 +5,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Track data lineage through processing steps"
+    "# Subsetting AnnData + data lineage"
    ]
   },
   {
@@ -121,7 +121,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ln.save(file)"
+    "file.save()"
    ]
   },
   {
@@ -140,8 +140,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ln.add(cell_types)\n",
-    "ln.add(tissues);"
+    "ln.save(cell_types)\n",
+    "ln.save(tissues)"
    ]
   },
   {
@@ -168,7 +168,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ln.select(lb.CellType).df()"
+    "lb.CellType.select().df()"
    ]
   },
   {
@@ -177,7 +177,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ln.select(lb.Tissue).df()"
+    "lb.Tissue.select().df()"
    ]
   },
   {
@@ -186,6 +186,28 @@
    "metadata": {},
    "source": [
     "## Processing of the dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "transform = ln.Transform(\n",
+    "    type=ln.types.TransformType.pipeline,\n",
+    "    name=\"subset_to_T_cells_and_liver_lymphoma\",\n",
+    "    version=\"0.1.0\",\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ln.track(transform)"
    ]
   },
   {
@@ -202,7 +224,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "file = ln.select(ln.File, key=\"mini_anndata_with_obs.h5ad\").one()"
+    "file = ln.File.select(key=\"mini_anndata_with_obs.h5ad\").one()"
    ]
   },
   {
@@ -211,7 +233,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "adata = file.backed()  # get a cloud-backed AnnData object"
+    "adata = file.backed(is_run_input=True)  # get a cloud-backed AnnData object"
    ]
   },
   {
@@ -246,8 +268,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "transform = ln.Transform(\n",
-    "    type=\"pipeline\", name=\"subset_to_T_cells_and_liver_lymphoma\", version=\"0.1.0\"\n",
+    "subset_obs = adata.obs.cell_type.isin([\"T cell\", \"hematopoietic stem cell\"]) & (\n",
+    "    adata.obs.disease.isin([\"liver lymphoma\", \"chronic kidney disease\"])\n",
     ")"
    ]
   },
@@ -257,36 +279,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ln.track(transform)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "obs = file.subsetter()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "subset_obs = obs.cell_type.isin([\"T cell\", \"hematopoietic stem cell\"]) & (\n",
-    "    obs.disease.isin([\"liver lymphoma\", \"chronic kidney disease\"])\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "adata_subset = file.stream(subset_obs=subset_obs, is_run_input=True)"
+    "adata_subset = adata[subset_obs]"
    ]
   },
   {
@@ -312,25 +305,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "```{tip}\n",
-    "\n",
-    "- For `h5ad`, you can provide either `query_obs` OR `query_var` for subsetting (h5py doesn't support indexing for multiple axis).\n",
-    "- For `zarr`, you can provide BOTH. (Note zarr streaming/subset only works with `anndata>=0.9.1`!)\n",
-    "\n",
-    "Subset to specific genes (`.var`):\n",
-    "\n",
-    "```python\n",
-    "genes = adata.var.index.values[:10]\n",
-    "var = file.subsetter()\n",
-    "adata_subset_var = file.stream(subset_var=var.index.isin(genes))\n",
-    "```"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "## Add the subset `AnnData` to LaminDB"
    ]
   },
@@ -340,7 +314,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "file_subset = ln.File(adata_subset, key=\"subset/mini_anndata_with_obs.h5ad\")"
+    "file_subset = ln.File(adata_subset.to_adata(), key=\"subset/mini_anndata_with_obs.h5ad\")"
    ]
   },
   {
@@ -349,7 +323,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ln.save(file_subset)"
+    "file_subset.save()"
    ]
   },
   {
@@ -405,14 +379,29 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "file_subset = (\n",
-    "    ln.select(ln.File, suffix=\".h5ad\")\n",
-    "    .filter(\n",
-    "        key__startswith=\"subset\",\n",
-    "        cell_types__name__in=[\"hematopoietic stem cell\", \"T cell\"],\n",
-    "    )\n",
-    "    .first()\n",
-    ")"
+    "cell_types = lb.CellType.lookup()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cell_types.hematopoietic_stem_cell"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "file_subset = ln.File.select(\n",
+    "    suffix=\".h5ad\",\n",
+    "    key__startswith=\"subset\",\n",
+    "    cell_types__name__in=[cell_types.hematopoietic_stem_cell, cell_types.T_cell],\n",
+    ").first()"
    ]
   },
   {
