--- a/docs/biology/enrichr.ipynb
+++ b/docs/biology/enrichr.ipynb
@@ -1,11 +1,45 @@
 {
  "cells": [
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "# Manage pathway ontology"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Background"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Pathways in single-cell analysis represent the interconnected networks of molecular signaling cascades that govern critical cellular processes. They are of utmost importance as they offer a comprehensive understanding of the intricate regulatory mechanisms underlying cellular behavior, providing insights into disease pathogenesis, therapeutic responses, and the identification of potential targets for precision medicine and intervention strategies."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Managing pathways across different datasets is crucial in a biotech company to gain a comprehensive understanding of complex biological processes and facilitate efficient research and development."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In this notebook we are registering the 2023 GO Biological process pathway ontology with Lamin. Afterwards, we are linking the pathways to genes and conducting a pathway enrichment analysis on an interferon-beta treated dataset. Finally, we will demonstrate how to fetch datasets with pathway queries using Lamin."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Setup"
    ]
   },
   {
@@ -16,16 +50,23 @@
    "source": [
     "import gseapy as gp\n",
     "import scanpy as sc\n",
-    "from lamin_examples import datasets as ds\n",
-    "import matplotlib.pyplot as plt"
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "from lamin_examples import datasets as ds"
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Fetch `GO_Biological_Process_2023` pathways annotated with human genes through Enrichr"
+    "## Fetch `GO_Biological_Process_2023` pathways annotated with human genes using Enrichr"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "First we fetch the \"GO_Biological_Process_2023\" pathways for humans using [GSEApy](https://github.com/zqfang/GSEApy) which wraps [GSEA](https://www.gsea-msigdb.org/gsea/index.jsp) and [Enrichr](https://maayanlab.cloud/Enrichr/)."
    ]
   },
   {
@@ -35,9 +76,7 @@
    "outputs": [],
    "source": [
     "go_bp = gp.get_library(name=\"GO_Biological_Process_2023\", organism=\"Human\")\n",
-    "\n",
-    "# number of pathways\n",
-    "len(go_bp)"
+    "print(f\"Number of pathways {len(go_bp)}\")"
    ]
   },
   {
@@ -50,7 +89,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -96,7 +134,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -104,11 +141,13 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Make sure you create or load a LaminDB instance before running the rest part of this notebook!"
+    "```{warning}\n",
+    "\n",
+    "Please ensure that you have created or loaded a LaminDB instance before running the remaining part of this notebook!\n",
+    "```"
    ]
   },
   {
@@ -136,34 +175,29 @@
     "import lamindb as ln\n",
     "from lnschema_bionty import Pathway, Gene\n",
     "\n",
-    "pathway_bionty = Pathway.bionty()  # equals to bionty.Pathway()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Check which ontology of Pathway is being used in bionty\n",
-    "\n",
+    "pathway_bionty = Pathway.bionty()  # equals to bionty.Pathway()\n",
     "pathway_bionty"
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Next, we register all the pathways in LaminDB and link them with genes."
+    "Next, we register all the pathways and genes in LaminDB to finally link pathways to genes."
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "### Register pathway terms"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "To register the pathways we make use of {func}`docs:lamindb.parse` to directly parse the annotated GO pathway ontology IDs into LaminDB."
    ]
   },
   {
@@ -194,11 +228,17 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "### Register gene symbols"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Similarly, we use {func}`docs:lamindb.parse` for all Pathway associated genes to register them with LaminDB."
    ]
   },
   {
@@ -207,9 +247,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "all_genes = {g for genes in go_bp.values() for g in genes}\n",
-    "\n",
-    "len(all_genes)"
+    "all_genes = {g for genes in go_bp.values() for g in genes}"
    ]
   },
   {
@@ -240,11 +278,17 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "### Link pathway to genes"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now that we are tracking all pathways and genes records, we can link both of them to make the pathways even more queryable."
    ]
   },
   {
@@ -269,7 +313,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -286,15 +329,27 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## A interferon-beta treated dataset\n",
+    "## A interferon-beta treated dataset"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We will now conduct a pathway enrichment analysis on a small peripheral blood mononuclear cell dataset that is split into control and stimulated groups.\n",
+    "The stimulated group was treated with interferon beta.\n",
     "\n",
-    "A PBMCs dataset split into a stimulated and control group. The stimulated group was treated with interferon beta.\n",
-    "\n",
-    "From \"SeuratData::ifnb\""
+    "The dataset was initially obtained using `From \"SeuratData::ifnb\"`."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's load the dataset and look at the cell type annotations."
    ]
   },
   {
@@ -304,7 +359,6 @@
    "outputs": [],
    "source": [
     "adata = ds.anndata_seurat_ifnb()\n",
-    "\n",
     "adata"
    ]
   },
@@ -318,11 +372,10 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Subset to \"B Activated\" cells:"
+    "For simplicity, we subset to \"B Activated\" cells:"
    ]
   },
   {
@@ -336,13 +389,24 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Over-representation analysis by Enrichr\n",
-    "\n",
-    "Based on: https://gseapy.readthedocs.io/en/master/singlecell_example.html"
+    "### Pathway enrichment analysis using Enrichr"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This analysis is based on: https://gseapy.readthedocs.io/en/master/singlecell_example.html"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "First, we compute differentially expressed genes using a Wilcoxon test between stimulated and control cells."
    ]
   },
   {
@@ -374,11 +438,10 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Filter out up/down-regulated differentially expressed gene sets:"
+    "Next, we filter out up/down-regulated differentially expressed gene sets:"
    ]
   },
   {
@@ -407,7 +470,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -437,15 +499,13 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Track datasets with pathways in LaminDB"
+    "## Track datasets containing annotated pathways in LaminDB"
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -459,6 +519,13 @@
    "outputs": [],
    "source": [
     "ln.track()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We further create a {func}`docs:lamindb.File` object to track the dataset."
    ]
   },
   {
@@ -480,11 +547,10 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Register featuresets for degs_up and degs_dw:"
+    "We further create two {func}`docs:lamindb.Featureset` for `degs_up` and `degs_dw` which we can later associate with the associated pathways:"
    ]
   },
   {
@@ -516,11 +582,10 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Link the top 10 pathways to the DEGs:"
+    "Link the top 10 pathways to the corresponding differentially expressed genes:"
    ]
   },
   {
@@ -530,12 +595,23 @@
    "outputs": [],
    "source": [
     "# get ontology ids for the top 10 pathways\n",
-    "enr_up_top10 = [i[0] for i in enr_up.head(10).Term.apply(parse_ontology_id_from_keys)]\n",
-    "enr_dw_top10 = [i[0] for i in enr_dw.head(10).Term.apply(parse_ontology_id_from_keys)]\n",
+    "enr_up_top10 = [\n",
+    "    pw_id[0] for pw_id in enr_up.head(10).Term.apply(parse_ontology_id_from_keys)\n",
+    "]\n",
+    "enr_dw_top10 = [\n",
+    "    pw_id[0] for pw_id in enr_dw.head(10).Term.apply(parse_ontology_id_from_keys)\n",
+    "]\n",
     "\n",
     "# get pathway records\n",
     "enr_up_top10_pathways = ln.parse(enr_up_top10, Pathway.ontology_id)\n",
     "enr_dw_top10_pathways = ln.parse(enr_dw_top10, Pathway.ontology_id)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Associate the pathways to the differentially expressed genes:"
    ]
   },
   {
@@ -558,7 +634,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -576,11 +651,17 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Query a pathway:"
+    "## Querying for pathways"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Querying for pathways is now simple with {func}`docs:lamindb.select`:"
    ]
   },
   {
@@ -593,7 +674,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -610,7 +690,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -629,11 +708,10 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Query featuresets from a pathway (from which geneset was this pathway computed?):"
+    "Query featuresets from a pathway to learn from which geneset this pathway was computed:"
    ]
   },
   {
@@ -643,7 +721,6 @@
    "outputs": [],
    "source": [
     "pathway = ln.select(Pathway, ontology_id=\"GO:0035456\").one()\n",
-    "\n",
     "pathway"
    ]
   },
@@ -657,7 +734,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -682,11 +758,42 @@
    "source": [
     "pathway_genes.intersection(degs_genes)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Conclusion"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Registering pathways and associated gene sets is made simple with {func}`docs:lamindb.parse` that ensures that all parsed objects are linked to ontology IDs.Linking both sets is possible with {func}`docs:lamindb.Featureset` to facilitate simple querying for datasets that contain specific pathways. Since the pathways are linked to genes, Lamin also enables fetching the associated genes of a registered pathway to, for example, retrieve sets of differentially expressed genes that are a part of a specific pathway."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Try it yourself"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This notebook is available at [https://github.com/laminlabs/lamin-examples](https://github.com/laminlabs/lamin-examples)."
+   ]
   }
  ],
  "metadata": {
+  "citation-manager": {
+   "items": {}
+  },
   "kernelspec": {
-   "display_name": "py39",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -700,7 +807,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.16"
+   "version": "3.10.10"
   },
   "nbproject": {
    "id": "6oxEIEduvo6w",
@@ -714,5 +821,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
