--- a/docs/biology/enrichr.ipynb
+++ b/docs/biology/enrichr.ipynb
@@ -59,6 +59,37 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "```{warning}\n",
+    "\n",
+    "Please ensure that you have created or loaded a LaminDB instance before running the remaining part of this notebook!\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# A lamindb instance containing bionty schema (skip if you already loaded your instance)\n",
+    "\n",
+    "!lamin init --storage enrichr --schema bionty"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import lamindb as ln\n",
+    "from lnschema_bionty import Pathway, Gene"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Fetch `GO_Biological_Process_2023` pathways annotated with human genes using Enrichr"
    ]
   },
@@ -141,40 +172,11 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "```{warning}\n",
-    "\n",
-    "Please ensure that you have created or loaded a LaminDB instance before running the remaining part of this notebook!\n",
-    "```"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": [
-     "hide-cell",
-     "hide-output"
-    ]
-   },
-   "outputs": [],
-   "source": [
-    "# A lamindb instance containing bionty schema (skip if you already loaded your instance)\n",
-    "\n",
-    "!lamin init --storage enrichr --schema bionty"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import lamindb as ln\n",
-    "from lnschema_bionty import Pathway, Gene\n",
-    "\n",
     "pathway_bionty = Pathway.bionty()  # equals to bionty.Pathway()\n",
     "pathway_bionty"
    ]
