--- a/docs/biology/celltypist.ipynb
+++ b/docs/biology/celltypist.ipynb
@@ -52,7 +52,7 @@
    },
    "outputs": [],
    "source": [
-    "# warnings from celltypist\n",
+    "# Filter warnings from celltypist\n",
     "import warnings\n",
     "\n",
     "warnings.filterwarnings(\"ignore\", message=\".*The 'nopython' keyword.*\")"
@@ -66,6 +66,44 @@
    "source": [
     "import celltypist\n",
     "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```{warning}\n",
+    "\n",
+    "Please ensure that you have created or loaded a LaminDB instance before running the remaining part of this notebook!\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# A lamindb instance containing Bionty schema (skip if you already loaded your instance)\n",
+    "\n",
+    "!lamin init --storage celltypist --schema bionty"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Next we import `lamindb` and `lnschema_bionty` which enables us to connect [Bionty](https://github.com/laminlabs/bionty) with [LaminDB](https://github.com/laminlabs/lamindb). This enables us to map cell types against ontologies and create SQL records within LaminDB to eventually make them queryable."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import lamindb as ln\n",
+    "from lnschema_bionty import CellType"
    ]
   },
   {
@@ -144,57 +182,12 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "```{warning}\n",
-    "\n",
-    "Please ensure that you have created or loaded a LaminDB instance before running the remaining part of this notebook!\n",
-    "```"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": [
-     "hide-cell",
-     "hide-output"
-    ]
-   },
-   "outputs": [],
-   "source": [
-    "# A lamindb instance containing Bionty schema (skip if you already loaded your instance)\n",
-    "\n",
-    "!lamin init --storage celltypist --schema bionty"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Next we import `lamindb` and `lnschema_bionty` which enables us to connect [Bionty](https://github.com/laminlabs/bionty) with [LaminDB](https://github.com/laminlabs/lamindb). This enables us to map cell types against ontologies and create SQL records within LaminDB to eventually make them queryable."
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import lamindb as ln\n",
-    "from lnschema_bionty import CellType\n",
-    "\n",
-    "celltype_bionty = CellType.bionty()  # equals to bionty.CellType()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Check out which ontology of cell types is used in bionty\n",
+    "celltype_bionty = CellType.bionty()  # equals to bionty.CellType()\n",
     "celltype_bionty"
    ]
   },
