--- a/docs/biology/lineage.ipynb
+++ b/docs/biology/lineage.ipynb
@@ -1,11 +1,55 @@
 {
  "cells": [
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "# Track data lineage through processing steps"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Background"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Data lineage tracking in the context of biological data refers to the process of capturing and documenting the origin, transformations, and flow of biological data throughout its lifecycle."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Data lineage tracking is of utmost importance and practical value as it empowers to maintain the traceability and reliability of biological data, verify experimental outcomes, meet stringent regulatory standards, and foster the reproducibility and transparency of scientific research and discoveries."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In this example use-case we will track an AnnData object throughout its lifecycle."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Setup"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```{warning}\n",
+    "\n",
+    "Please ensure that you have created or loaded a LaminDB instance before running the remaining part of this notebook!\n",
+    "```"
    ]
   },
   {
@@ -24,6 +68,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Import `lamindb` and `lnschema_bionty` which enables us to connect [Bionty](https://github.com/laminlabs/bionty) with [LaminDB](https://github.com/laminlabs/lamindb). This enables us to map AnnData metadata annotations against ontologies and create SQL records within LaminDB to eventually make them queryable."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -31,6 +82,20 @@
    "source": [
     "import lamindb as ln\n",
     "import lnschema_bionty as lb"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Track cell types, tissues and diseases"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's enable tracking of the current notebook as the transform of this file using {func}`docs:lamindb.track`:"
    ]
   },
   {
@@ -43,19 +108,10 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Track AnnData with cell types, tissues and diseases"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### An AnnData with `tissue`, `cell_type`, `disease` in `.obs`"
+    "We fetch an example dataset from LaminDB that has a few cell type, tissue and disease annotations:"
    ]
   },
   {
@@ -64,15 +120,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "adata = ln.dev.datasets.anndata_with_obs()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "adata = ln.dev.datasets.anndata_with_obs()\n",
     "adata"
    ]
   },
@@ -86,7 +134,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -94,13 +141,19 @@
    ]
   },
   {
-   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "As a first step, we register the Anndata object with LaminDB using {func}`docs:lamindb.File` and {func}`docs:lamindb.save`:"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "```{note}\n",
     "\n",
-    "If you don't want auto-populated ontology_ids, use ln.parse(..., from_bionty=False).\n",
+    "If you do not want auto-populated ontology_ids, use ln.parse(..., from_bionty=False).\n",
     "\n",
     "Also see: {doc}`docs:guide/parse`\n",
     "```"
@@ -125,6 +178,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Using {func}`docs:lamindb.parse` we can associate the cell types and tissues with the Ontology metadata:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -132,6 +192,13 @@
    "source": [
     "cell_types = ln.parse(adata.obs.cell_type, lb.CellType.name)\n",
     "tissues = ln.parse(adata.obs.tissue, lb.Tissue.name)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Register the cell types and tissues with LaminDB:"
    ]
   },
   {
@@ -145,6 +212,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Associate the cell types and tissues with the {func}`docs:lamindb.File` object."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -155,11 +229,19 @@
    ]
   },
   {
-   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "### Your vocabulary store"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Your vocabulary store"
+    "Examine the currently available cell types and tissues:"
    ]
   },
   {
@@ -181,19 +263,26 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "## Processing of the dataset"
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Pull the ingested parent dataset:"
+    "In the following we will modify the AnnData object to demonstrate data lineage tracking with LaminDB."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Get a cloud-backed AnnData object"
    ]
   },
   {
@@ -211,15 +300,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "adata = file.backed()  # get a cloud-backed AnnData object"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "adata = file.backed()\n",
     "adata"
    ]
   },
@@ -233,11 +314,17 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Subset dataset to specific cell types and diseases (`.obs`)"
+    "### Subset dataset to specific cell types and diseases"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "To track our data transformation we create a new {func}`docs:lamindb.Transform` of type \"pipeline\":"
    ]
   },
   {
@@ -252,12 +339,26 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Set the current tracking to the new transform using {func}`docs:lamindb.track`:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "ln.track(transform)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Using {func}`docs:lamindb.File` subsetter we can fetch a subset of our cloud backed AnnData object:"
    ]
   },
   {
@@ -286,15 +387,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "adata_subset = file.stream(subset_obs=subset_obs, is_run_input=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "adata_subset = file.stream(subset_obs=subset_obs, is_run_input=True)\n",
     "adata_subset"
    ]
   },
@@ -308,7 +401,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -327,11 +419,17 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Add the subset `AnnData` to LaminDB"
+    "### Add the subset `AnnData` to LaminDB"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This subset can now be registered with LaminDB."
    ]
   },
   {
@@ -353,7 +451,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -379,24 +476,31 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Data lineage\n",
+    "## Examining data lineage"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Common questions that might arise are:\n",
     "\n",
     "- Which h5ad file is in the `subset` subfolder?\n",
     "- Which notebook ingested this file?\n",
     "- By whom?\n",
-    "- And which file is its parent?"
+    "- And which file is its parent?\n",
+    "\n",
+    "Let's answer this using LaminDB:"
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Query a subsetted `.h5ad` file containing \"hematopoietic stem cell\" and \"T cell\":"
+    "Query a subsetted `.h5ad` file containing \"hematopoietic stem cell\" and \"T cell\" to learn which h5ad file is in the `subset` subfolder:"
    ]
   },
   {
@@ -412,28 +516,11 @@
     "        cell_types__name__in=[\"hematopoietic stem cell\", \"T cell\"],\n",
     "    )\n",
     "    .first()\n",
-    ")"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "File:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    ")\n",
     "file_subset"
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -450,7 +537,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -467,11 +553,10 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Parent files:"
+    "What are the parent files?"
    ]
   },
   {
@@ -482,11 +567,42 @@
    "source": [
     "file_subset.run.inputs.values()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Conclusion"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Data lineage tracking can be easily achieved with Lamin through {func}`docs:lamindb.Transform` together with {func}`docs:lamindb.track`."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Try it yourself"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This notebook is available at [https://github.com/laminlabs/lamin-examples](https://github.com/laminlabs/lamin-examples)."
+   ]
   }
  ],
  "metadata": {
+  "citation-manager": {
+   "items": {}
+  },
   "kernelspec": {
-   "display_name": "py39",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -500,7 +616,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.16"
+   "version": "3.10.10"
   },
   "nbproject": {
    "id": "eNef4Arw8nNM",
@@ -514,5 +630,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
