--- a/docs/biology/lineage.ipynb
+++ b/docs/biology/lineage.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Track data lineage through processing steps"
+    "# Data lineage of an AnnData object"
    ]
   },
   {
@@ -207,8 +207,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ln.add(cell_types)\n",
-    "ln.add(tissues);"
+    "ln.save(cell_types)\n",
+    "ln.save(tissues);"
    ]
   },
   {
@@ -250,7 +250,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ln.select(lb.CellType).df()"
+    "lb.CellType.select().df()"
    ]
   },
   {
@@ -259,7 +259,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ln.select(lb.Tissue).df()"
+    "lb.Tissue.select().df()"
    ]
   },
   {
@@ -276,48 +276,6 @@
    "metadata": {},
    "source": [
     "In the following we will modify the AnnData object to demonstrate data lineage tracking with LaminDB."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Get a cloud-backed AnnData object"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "file = ln.select(ln.File, key=\"mini_anndata_with_obs.h5ad\").one()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "adata = file.backed()\n",
-    "adata"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "adata.obs[[\"cell_type\", \"disease\"]].value_counts()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Subset dataset to specific cell types and diseases"
    ]
   },
   {
@@ -358,7 +316,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Using {func}`docs:lamindb.File` subsetter we can fetch a subset of our cloud backed AnnData object:"
+    "### Get a cloud-backed AnnData object"
    ]
   },
   {
@@ -367,7 +325,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "obs = file.subsetter()"
+    "file = ln.File.select(key=\"mini_anndata_with_obs.h5ad\").one()"
    ]
   },
   {
@@ -376,8 +334,41 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "subset_obs = obs.cell_type.isin([\"T cell\", \"hematopoietic stem cell\"]) & (\n",
-    "    obs.disease.isin([\"liver lymphoma\", \"chronic kidney disease\"])\n",
+    "adata = file.backed(run_input=True)\n",
+    "adata"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "adata.obs[[\"cell_type\", \"disease\"]].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Subset dataset to specific cell types and diseases"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Create the subset:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "subset_obs = adata.obs.cell_type.isin([\"T cell\", \"hematopoietic stem cell\"]) & (\n",
+    "    adata.obs.disease.isin([\"liver lymphoma\", \"chronic kidney disease\"])\n",
     ")"
    ]
   },
@@ -387,7 +378,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "adata_subset = file.stream(subset_obs=subset_obs, is_run_input=True)\n",
+    "adata_subset = adata[subset_obs]\n",
     "adata_subset"
    ]
   },
@@ -398,24 +389,6 @@
    "outputs": [],
    "source": [
     "adata_subset.obs[[\"cell_type\", \"disease\"]].value_counts()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "```{tip}\n",
-    "\n",
-    "- For `h5ad`, you can provide either `query_obs` OR `query_var` for subsetting (h5py doesn't support indexing for multiple axis).\n",
-    "- For `zarr`, you can provide BOTH. (Note zarr streaming/subset only works with `anndata>=0.9.1`!)\n",
-    "\n",
-    "Subset to specific genes (`.var`):\n",
-    "\n",
-    "```python\n",
-    "genes = adata.var.index.values[:10]\n",
-    "var = file.subsetter()\n",
-    "adata_subset_var = file.stream(subset_var=var.index.isin(genes))\n",
-    "```"
    ]
   },
   {
@@ -438,7 +411,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "file_subset = ln.File(adata_subset, key=\"subset/mini_anndata_with_obs.h5ad\")"
+    "le_subset = ln.File(adata_subset.to_adata(), key=\"subset/mini_anndata_with_obs.h5ad\")"
    ]
   },
   {
@@ -447,7 +420,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ln.save(file_subset)"
+    "file_subset.save()"
    ]
   },
   {
@@ -509,15 +482,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "file_subset = (\n",
-    "    ln.select(ln.File, suffix=\".h5ad\")\n",
-    "    .filter(\n",
-    "        key__startswith=\"subset\",\n",
-    "        cell_types__name__in=[\"hematopoietic stem cell\", \"T cell\"],\n",
-    "    )\n",
-    "    .first()\n",
-    ")\n",
-    "file_subset"
+    "cell_types_bionty_lookup = lb.CellType.lookup()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "le_subset = ln.File.select(\n",
+    "    suffix=\".h5ad\",\n",
+    "    key__startswith=\"subset\",\n",
+    "    cell_types__name__in=[cell_types.hematopoietic_stem_cell, cell_types.T_cell],\n",
+    ").first()"
    ]
   },
   {
